Inseriti colori nelle variabili da usare

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -1,6 +1,35 @@
+// COLORI UTILIZZATI
+:root{
+    // COLOR CUBE
+    --white-color: #ffffff;
+    --ebonyClay-color: #292f47;
+    --coralRed-color: #ff4550;
+    --halfBaked-color: #87c6d3;
+    --forestGreen-color: #2db634;
+    --bazaar-color: #a08487;
+    --azure-color: #375ca2;
+    --yellow-color: #fefe02;
+    --sundown-color: #feaeb0;
+    --vesuvius-color: #a1440d;
+
+    // MEDIAN CUT
+    --oxfordBlue-color: #334453;
+    --mystic-color: #dde6eb;
+    --amaranth-color: #ec4658;
+    --bouquet-color: #b68995;
+    --husk-color: #b79854;
+    
+    // MATERIAL DESIGN
+    --bostoBlue-color: #3a78bd;
+    --venus-color: #9b8a92;
+    --apple-color: #46af35;
+    --ebonyClayMaterial-color: #2b2c43;
+    --halfBaked-color: #87c5d5;
+}
+
 body {
 
 }
 #app{
-    
+
 }
