--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -18,13 +18,13 @@
     --amaranth-color: #ec4658;
     --bouquet-color: #b68995;
     --husk-color: #b79854;
-    
+
     // MATERIAL DESIGN
     --bostoBlue-color: #3a78bd;
     --venus-color: #9b8a92;
     --apple-color: #46af35;
     --ebonyClayMaterial-color: #2b2c43;
-    --halfBaked-color: #87c5d5;
+    --halfBakedMaterial-color: #87c5d5;
 }
 
 body {
