Aggiunte sezioni colors e content in style.scss

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -1,4 +1,4 @@
-// COLORI UTILIZZATI
+// -------- #colors --------
 :root{
     // COLOR CUBE
     --white-color: #ffffff;
@@ -26,7 +26,7 @@
     --ebonyClayMaterial-color: #2b2c43;
     --halfBakedMaterial-color: #87c5d5;
 }
-
+// -------- #content --------
 body {
 
 }
