Aggiunto div separatore e skinnato

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -26,6 +26,11 @@
     --ebonyClayMaterial-color: #2b2c43;
     --halfBakedMaterial-color: #87c5d5;
 }
+// -------- #utilities --------
+.separator{
+    border-bottom: 1px solid #e5e5e5;
+}
+
 // -------- #content --------
 body {
 
